# slabkit

./: Cargo.toml  ast.sh  definition.bnf  readme.md
.lepper/: _info.json
src/: main.rs
src/evaluator/: mod.rs
src/file_ops/: mod.rs
src/html/: mod.rs
src/lexer/: mod.rs
src/logger/: mod.rs
src/parser/: mod.rs
src/tokenizer/: mod.rs
src/utils/: mod.rs
templates/: hero.slk  test.slk
temps/: data.json  hero.html  result.html
tests/test-files/: test-template.html
