[package]
name = "slabkit"
version = "0.0.1"
edition = "2021"
authors = ["NDIZIHIWE Regis <ndizihiweregis06@gmail.com>"]
description = "HTML Templating engine used @scriptylabs templates"
readme = "README.md"
license = "MIT"
repository = "https://github.com/regisrex/slabkit"
keywords = ["html template engine"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1.11.1"
serde = {version = "1.0.216"}
serde_json = "1.0.133"
